--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "boom": "^4.2.0",
+    "fcm": "^1.0.3",
     "good": "^7.1.0",
     "good-console": "^6.4.0",
     "good-squeeze": "^5.0.1",
